--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nemiah/php-sepa-xml", 
+    "name": "flexcom/php-sepa-xml", 
 	"description": "Simple classes for creating SEPA transfer and direct debit xml files. No dependencies",
 	"license": "LGPL-3.0",
 	"type": "library",
